--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Fumi Nagasaki</span></h1>
-                <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/img_profile2.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>東京都在住のクリエイター、長崎芙美です。現在、オンラインスクールでwebデザインを勉強中。その他web企画やライティングをしながら、web系クリエイターとして活動しています。趣味はアクセサリー製作。</p>
             </div>
         </header>
